tests/baselines/reference/undeclaredBase.errors.txt
tests/cases/compiler/undeclaredBase.ts(1,35): error TS2305: Module 'M' has no exported member 'I'.


==== tests/cases/compiler/undeclaredBase.ts (1 errors) ====
    module M { export class C extends M.I { } }
                                      ~~~
!!! error TS2305: Module 'M' has no exported member 'I'.
    
    